--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,10 +11,8 @@
     @apply bg-white text-gray-900 antialiased;
   }
 
-  @media (prefers-color-scheme: dark) {
-    body {
-      @apply bg-gray-900 text-gray-100;
-    }
+  .dark body {
+    @apply bg-gray-900 text-gray-100;
   }
 }
 
